syntax = "proto3";

package lg;

message Msg {

  string hid = 1;
  oneof inner {
    Broadcast broadcast = 2;
    BroadcastReply broadcastReply = 3;
    TargetHit targetHit = 4;
  }  
}

message TargetHit{
  int32 fromId = 1;
}

message Broadcast {
  TransportLayer transportLayer = 1;
  oneof addr {
    IpAddr ipAddr = 2;
    FunkAddr funkAddr = 3;
  }
  DeviceType deviceType = 4;
}

message BroadcastReply {
  TransportLayer transportLayer = 1;
  oneof addr {
    IpAddr ipAddr = 2;
    FunkAddr funkAddr = 3;
  }
  DeviceType deviceType = 4;
}

enum DeviceType {
  REFLECTOR = 0;
  TAGGER = 1;
}

enum TransportLayer {
  IP = 0;
  FUNK = 1;
}

message IpAddr {
  string ip = 1;
  int32 port = 2;
}

message FunkAddr {
  string addr = 1;
}
